--- a/dog_vision.ipynb
+++ b/dog_vision.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1Vo_TkpROms1TVQRxmwnkDyMO3ffD6Dz8",
-      "authorship_tag": "ABX9TyPCl0fHvZjhWTq94792IM/u",
+      "authorship_tag": "ABX9TyPRTdWwVJ2rqTVhEqiDgxcb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
         "id": "G9x6GfZaWbj6"
       },
       "source": [
-        "# End-to-end MuMulti-class Dog Bread Classification\n",
+        "# End-to-end Multi-class Dog Bread Classification\n",
         "\n",
         "This notebook builds an end-to-end multi-class image classifier using TensorFlow 2.0 and TensorFlow Hub.\n",
         "\n",
@@ -92,7 +92,7 @@
         "import tensorflow as tf\n",
         "print(\"TF version:\", tf.__version__)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -120,7 +120,7 @@
         "# Check for GPU avaialability\n",
         "print(\"GPU\", \"available (YESSS!!)\" if tf.config.list_physical_devices(\"GPU\") else \"not available :(\")"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -161,7 +161,7 @@
         "print(labels_csv.describe())\n",
         "print(labels_csv.head())"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -187,7 +187,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 529
+          "height": 752
         },
         "id": "EjLqEinAEskS",
         "outputId": "9ce90c10-aabe-48ba-b3e1-d00b1066ee83"
@@ -196,7 +196,7 @@
         "# How many images are there of each breed?\n",
         "labels_csv[\"breed\"].value_counts().plot.bar(figsize=(20,10))"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -237,7 +237,7 @@
       "source": [
         "labels_csv[\"breed\"].value_counts().median()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -268,7 +268,7 @@
         "from IPython.display import Image\n",
         "Image(\"drive/MyDrive/MLPROJECT/DOG_VISON/train/001513dfcb2ffafc82cccf4d8bbaba97.jpg\")"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -312,7 +312,7 @@
         "# Check the first 5\n",
         "filenames[:5]"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -349,7 +349,7 @@
         "else:\n",
         "  print(\"Numbers not matched\")"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -373,7 +373,7 @@
       "source": [
         "Image(filenames[9000])"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -403,7 +403,7 @@
       "source": [
         "labels_csv[\"breed\"][9000]"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -446,7 +446,7 @@
         "# labels = np.array(labels) # does same thing as above\n",
         "labels"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -475,7 +475,7 @@
       "source": [
         "len(labels)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -507,7 +507,7 @@
         "else:\n",
         "  print(\"Not matched\")"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -532,7 +532,7 @@
         "unique_breeds = np.unique(labels)\n",
         "len(unique_breeds)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -562,7 +562,7 @@
         "print(labels[0])\n",
         "labels[0] == unique_breeds"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -612,7 +612,7 @@
         "boolean_labels = [label == unique_breeds for label in labels]\n",
         "boolean_labels[:2]"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -667,7 +667,7 @@
       "source": [
         "len(boolean_labels)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -699,7 +699,7 @@
         "print(boolean_labels[0].argmax()) # index where label occurs in boolean array\n",
         "print(boolean_labels[0].astype(int)) # there will be a 1 where the sample label occurs"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -729,7 +729,7 @@
         "print(labels[2])\n",
         "print(boolean_labels[2].astype(int))"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -765,7 +765,7 @@
         "X = filenames\n",
         "y = boolean_labels"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -786,7 +786,7 @@
         "# set number of images to use for experimenting\n",
         "NUM_IMAGES = 1000 #@param {type:\"slider\", min:1000, max:10000}"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -810,7 +810,7 @@
         "\n",
         "len(X_train), len(y_train), len(X_val), len(y_val)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -839,7 +839,7 @@
         "# Let's see the data\n",
         "X_train[:5], y_train[:2]"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -922,7 +922,7 @@
         "image = imread(filenames[42])\n",
         "image.shape"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -950,7 +950,7 @@
       "source": [
         "image[:2]"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -993,7 +993,7 @@
         "# turn image into a tensor\n",
         "tf.constant(image)[:2]"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1052,7 +1052,7 @@
         "\n",
         "  return image\n"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1087,7 +1087,7 @@
         "  image = process_image(image_path)\n",
         "  return image, label"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1103,7 +1103,7 @@
         "# demo of the above\n",
         "(process_image(X[42]), tf.constant(y[42]))"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1237,7 +1237,7 @@
         "    data_batch = data.batch(BATCH_SIZE)\n",
         "  return data_batch"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1254,7 +1254,7 @@
         "train_data = create_data_batches(X_train, y_train)\n",
         "val_data = create_data_batches(X_val, y_val, valid_data=True)"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1279,7 +1279,7 @@
         "# Check out the different attributes of our data batches\n",
         "train_data.element_spec, val_data.element_spec"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1335,7 +1335,7 @@
         "    # Turn the grid lines off\n",
         "    plt.axis(\"off\")"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1353,7 +1353,7 @@
         "train_images, train_labels = next(train_data.as_numpy_iterator())\n",
         "show_25_images(train_images, train_labels)"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1385,7 +1385,7 @@
         "val_images, val_labels = next(val_data.as_numpy_iterator())\n",
         "show_25_images(val_images, val_labels)"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1416,24 +1416,6 @@
         "* The output shape (image labels, in the form of Tensors) of our model.\n",
         "* The URL of the model we want to use. Which is from TensorFlow Hub - https://tfhub.dev/google/tf2-preview/mobilenet_v2/classification/4"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "hJQXPn5g5Ls1"
-      },
-      "source": [
-        "# Setup input shape to the model\n",
-        "INPUT_SHAPE = [None, IMG_SIZE, IMG_SIZE, 3] # batch, height, width, colour channels\n",
-        "\n",
-        "# setup output shape of our model\n",
-        "OUTPUT_SHAPE = len(unique_breeds)\n",
-        "\n",
-        "# Setup model URL from TensorFlow Hub\n",
-        "MODEL_URL = \"https://tfhub.dev/google/tf2-preview/mobilenet_v2/classification/4\""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
