--- a/dog_vision.ipynb
+++ b/dog_vision.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1Vo_TkpROms1TVQRxmwnkDyMO3ffD6Dz8",
-      "authorship_tag": "ABX9TyPcdIpBEZWQ4cjs+vCpnQFO",
+      "authorship_tag": "ABX9TyPWMK0X4yjZZLdIBrFiM3sq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1577,12 +1577,11 @@
         "# Create a function to build a TensorBoard callback\n",
         "def create_tensorboard_callback():\n",
         "  # Create a log directory for storing TensorBoard logs\n",
-        "  logdir = os.path.join(\"drive/MyDrive/MLPROJECT/DOG_VISON/logs\", \n",
-        "                        # Make it so the logs get tracked whenever we run an experiment\n",
+        "  logdir = os.path.join(\"drive/MyDrive/MLPROJECT/DOG_VISON/logs\",\n",
         "                        datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\"))\n",
-        "  return tf.keras.callbacks.TensorBoard(log_dir)"
+        "  return tf.keras.callbacks.TensorBoard(logdir)"
       ],
-      "execution_count": 43,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -1632,9 +1631,117 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "H0wZ6eAXHegs"
+      },
+      "source": [
+        "Let's create a function which trains a model.\n",
+        "\n",
+        "* Create a model using `create_model`\n",
+        "* Setup a TensorBoard callback using `create_tensorboard_callback()`\n",
+        "* Call the `fit()` function on our model passing it the training data, validation data, number of epochs to train for (`NUM_EPOCHS`) and the callbacks we'd like to use\n",
+        "* Return the model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gdSvygekIlM6"
+      },
+      "source": [
+        "# Build a function to train and return a trained model\n",
+        "def train_model():\n",
+        "  \"\"\"\n",
+        "  Trains a given model and returns the trained version.\n",
+        "  \"\"\"\n",
+        "  # Create a model\n",
+        "  model = create_model()\n",
+        "\n",
+        "  # Create new TensorBoard session everytime we train a model\n",
+        "  tensorboard = create_tensorboard_callback()\n",
+        "\n",
+        "  # Fit the model to the data passing it the callbacks we created\n",
+        "  model.fit(x=train_data,\n",
+        "            epochs=NUM_EPOCHS,\n",
+        "            validation_data=val_data,\n",
+        "            validation_freq=1,\n",
+        "            callbacks=[tensorboard, early_stopping])\n",
+        "  # Return the fitted model\n",
+        "  return model"
+      ],
+      "execution_count": 52,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "D7P_-8OJJ4Dc",
+        "outputId": "cdf8c5ad-c24f-42ef-e80c-b2a1bb998ff3"
+      },
+      "source": [
+        "# Fit the model to the data\n",
+        "model = train_model()"
+      ],
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Building model with : https://tfhub.dev/google/imagenet/mobilenet_v2_130_224/classification/5\n",
+            "Epoch 1/100\n",
+            "25/25 [==============================] - 341s 12s/step - loss: 4.6487 - accuracy: 0.0925 - val_loss: 3.4646 - val_accuracy: 0.2450\n",
+            "Epoch 2/100\n",
+            "25/25 [==============================] - 5s 178ms/step - loss: 1.6754 - accuracy: 0.6712 - val_loss: 2.2183 - val_accuracy: 0.4650\n",
+            "Epoch 3/100\n",
+            "25/25 [==============================] - 4s 179ms/step - loss: 0.5755 - accuracy: 0.9287 - val_loss: 1.6976 - val_accuracy: 0.5700\n",
+            "Epoch 4/100\n",
+            "25/25 [==============================] - 4s 162ms/step - loss: 0.2541 - accuracy: 0.9912 - val_loss: 1.5038 - val_accuracy: 0.6400\n",
+            "Epoch 5/100\n",
+            "25/25 [==============================] - 5s 179ms/step - loss: 0.1480 - accuracy: 0.9962 - val_loss: 1.4357 - val_accuracy: 0.6400\n",
+            "Epoch 6/100\n",
+            "25/25 [==============================] - 5s 179ms/step - loss: 0.1009 - accuracy: 1.0000 - val_loss: 1.3886 - val_accuracy: 0.6450\n",
+            "Epoch 7/100\n",
+            "25/25 [==============================] - 4s 176ms/step - loss: 0.0759 - accuracy: 1.0000 - val_loss: 1.3592 - val_accuracy: 0.6550\n",
+            "Epoch 8/100\n",
+            "25/25 [==============================] - 4s 162ms/step - loss: 0.0603 - accuracy: 1.0000 - val_loss: 1.3354 - val_accuracy: 0.6550\n",
+            "Epoch 9/100\n",
+            "25/25 [==============================] - 4s 160ms/step - loss: 0.0494 - accuracy: 1.0000 - val_loss: 1.3163 - val_accuracy: 0.6600\n",
+            "Epoch 10/100\n",
+            "25/25 [==============================] - 4s 177ms/step - loss: 0.0416 - accuracy: 1.0000 - val_loss: 1.2978 - val_accuracy: 0.6600\n",
+            "Epoch 11/100\n",
+            "25/25 [==============================] - 4s 159ms/step - loss: 0.0359 - accuracy: 1.0000 - val_loss: 1.2866 - val_accuracy: 0.6700\n",
+            "Epoch 12/100\n",
+            "25/25 [==============================] - 4s 161ms/step - loss: 0.0313 - accuracy: 1.0000 - val_loss: 1.2746 - val_accuracy: 0.6700\n",
+            "Epoch 13/100\n",
+            "25/25 [==============================] - 4s 162ms/step - loss: 0.0276 - accuracy: 1.0000 - val_loss: 1.2653 - val_accuracy: 0.6750\n",
+            "Epoch 14/100\n",
+            "25/25 [==============================] - 4s 177ms/step - loss: 0.0245 - accuracy: 1.0000 - val_loss: 1.2580 - val_accuracy: 0.6750\n",
+            "Epoch 15/100\n",
+            "25/25 [==============================] - 4s 159ms/step - loss: 0.0221 - accuracy: 1.0000 - val_loss: 1.2506 - val_accuracy: 0.6700\n",
+            "Epoch 16/100\n",
+            "25/25 [==============================] - 4s 178ms/step - loss: 0.0200 - accuracy: 1.0000 - val_loss: 1.2463 - val_accuracy: 0.6750\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3itQzwJ7K5VY"
+      },
+      "source": [
+        "**Question:** It looks like our model is overfitting because it's performing far better on the training dataset than the validation data. Whate are some ways to prevent model overfitting in deep learning neural networks?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Kiz598jTNqno"
       },
       "source": [
         ""
